# dribdat

./: .bowerrc  .coveragerc  .coveralls.yml  .dockerignore  .flaskenv  .gitignore  .gitmodules  .pyup.yml  .travis.yml  ABOUT.md  CODE_OF_CONDUCT.md  Dockerfile  FUNDING.json  FUNDING.yml  LICENSE  PACKAGE.txt  Pipfile  Procfile  README.md  README.rst  SECURITY.md  USAGE.md  app.json  autoapp.py  bower.json  check_ids.py  cli.py  codecov.yml  create_test_data.py  custom.css  deploy-stackscript.sh  docker-compose.example.yml  docker-compose.local.yml  docker-compose.sqlite.yml  docker-compose.yml  featuretest.sh  force-migrate.sh  gunicorn.conf.py  hack4socialgood.md  manage.py  (+15 more)
.github/: FUNDING.yml
.github/workflows/: codeql-analysis.yml  docker-image.yml  test.yml
docs/: ABOUT.md  CONTRIBUTE.md  DEPLOY.md  MATCHING.md  README.md  RESOURCE_EXTRACTION.md  SWIYU.md  TROUBLE.md  USAGE.md
dribdat/: aggregation.py  apievents.py  apifetch.py  apigenerate.py  apipackage.py  apiutils.py  app.py  assets.py  auth0.py  authutils.py  commands.py  database.py  decorators.py  encryption.py  extensions.py  futures.py  git.py  mailer.py  matching.py  onebox.py  settings.py  utils.py
dribdat/admin/: __init__.py  forms.py  views.py
dribdat/api/: parser.py
dribdat/boxout/: __init__.py  ckan.py  datapackage.py  dribdat.py  github.py
dribdat/public/: __init__.py  api.py  auth.py  feeds.py  forms.py  openapi.py  project.py  projhelper.py  userhelper.py  views.py
dribdat/sso/: __init__.py  hitobito.py  mattermost.py  oauth2.py  ssoutils.py
dribdat/static/css/: honeycomb.css  makezurich.css  social.css  style.css  timeline.css
dribdat/static/js/: admin.js  clock.js  editor.js  notify.js  render.js  script.js  stats.js
dribdat/static/libs/: FlipClock  barba  bootstrap  bootswatch  easymde  flipclock  flipdown  font-awesome  jquery  jquery-resizable  jquery-sortable  popper.js  reveal  simplelightbox  toastui-editor
dribdat/templates/: 401.html  404.html  500.html  footer.html  layout.html  nav.html  quickstart.html  render.html  slides.html
dribdat/templates/admin/: categories.html  category.html  categorynew.html  event.html  eventnew.html  eventprint.html  eventprojects.html  events.html  index.html  layout.html  presets.html  project.html  projectnew.html  projects.html  question.html  questionnew.html  reset.html  resource.html  resourcenew.html  resources.html  role.html  rolenew.html  roles.html  stages.html  start.html  teambuilder.html  teambuilder_results.html  user.html  useredit.html  usernew.html  userprofile.html  users.html
dribdat/templates/includes/: analytics.html  codeofconduct.md  eventhome.html  eventjoin.html  eventstart.md  footer.html  header.html  loginsso.html  nav.html  pagination.html  pleasewait.html  projectdialogs.html  projectnav.html  quickstart.html  quickstart.md  recommender.html  search.html  social.html  stages.csv  stages.yaml  survey.yaml  terms.md  uploader.html
dribdat/templates/macros/: _detail.html  _event.html  _form.html  _misc.html  _project.html  _social.html  _upload.html
dribdat/templates/public/: about.html  activation.html  bootstrapedit.html  dashboard.html  (+44 more)
dribdat/user/: __init__.py  constants.py  forms.py  models.py  validators.py
frontend/: package-lock.json  package.json
image/: docker-entrypoint.sh
image/docker-entrypoint.d/: 10-migrate.sh
migrations/: env.py
migrations/versions/: 0884a8accfad_.py  0c5ae11e7666_.py  11fb3f968cfd_.py  1ba5ea3134a7_.py  2b948713686c_.py  2e16efec66e4_.py  30e6fbf01833_.py  47bfc29a47b4_.py  5590cf870212_.py  66da53eca449_.py  66da53eca449_add_wishes.py  76ca7cac4cdc_.py  7c3929047190_.py  84d8ce8453f3_.py  9a58ab682a87_.py  9abdd2b3684d_.py  a1d2eb91bd0b_.py  ac23802e6154_add_resource_model.py  bb64201bbff6_.py  be2e25e12e69_.py  be6bc930546b_add_my_ranking_to_user.py  be6bc930546b_ranking.py  cf47d6b6bb32_add_cc_signal_to_project_model.py  d834973bc366_.py  efbe8a1c4eab_.py  f2104842f6b0_.py  f5ee0fa5649b_.py  f8d682598e82_.py
requirements/: dev.txt  prod.txt
scripts/: force-migrate.sh  publish-docker-dev.sh
tests/: conftest.py  factories.py  test_aggregate.py  test_api.py  test_api_parser.py  test_apiviews.py  test_auth.py  test_auth_more.py  test_config.py  test_editing.py  test_events.py  test_features.py  test_forms.py  test_functional.py  test_huggingface.py  test_import.py  test_issue_repro.py  test_matching.py  test_models.py  test_notifications.py  test_posting.py  test_project_more.py  test_projects.py  test_render.py  test_repo_doc.py  test_repo_git.py  test_repo_github.py  test_repo_hf.py  test_repo_other.py  test_repository.py  test_sync.py  test_views.py
tests/mock/: __init__.py  datapackage.json  project_data.py
(+6 files in other folders)
