[tool.poetry]
name = "dribdat"
version = "0.7"
description = "Open source platform for collaborative events"
authors = ["Oleg Lavrovsky <dribdat@datalets.ch>"]

[tool.poetry.dependencies]
bleach = ">=3.1.4"
boto3 = ">=1.19.12,<1.20"
click = ">=6.7"
cssmin = ">=0.2.0"
email-validator = "^1.1.2"
eventlet = "==0.30.2"
flask = ">=0.12.2"
flask-assets = ">=0.12"
flask-bcrypt = ">=0.7.1"
flask-caching = ">=1.3.3"
flask-cors = "^3"
flask-dance = "^5"
flask-hashing = ">=1.1"
flask-login = ">=0.4.0"
flask-migrate = ">=2.1.1"
flask-misaka = ">=0.4.1"
flask-sqlalchemy = ">=2.3.2"
flask-talisman = ">=0.7.0"
flask-wtf = ">=1.0.0"
frictionless = ">=4.19.5,<5"
future = ">=0.16.0"
graphene = ">=1.4.1"
gunicorn = ">=19.7.1"
itsdangerous = ">=0.24"
jinja2 = ">=2.9.6"
jsmin = ">=2.2.2"
markupsafe = ">=1.0"
micawber = ">=0.5.1"
misaka = ">=2.1.0"
psycopg2-binary = ">=2.7.3.1"
pyquery = ">=1.2.17"
pystache = ">=0.5.4"
python = ">=3.7,<4"
python-dotenv = ">=0.13.0"
pytz = ">=2021.1"
pyyaml = "^5.4.1"
redis = ">=2.10.6"
requests = ">=2.18.4"
sqlalchemy = ">=1.1.14,<1.4.23"
werkzeug = ">=0.12"
whitenoise = "^5"
wtforms = ">=2.1,<3"
hiredis = "^2.0.0"
SQLAlchemy-Continuum = "^1.3.12"

[tool.poetry.dev-dependencies]
factory-boy = "*"
flake8 = "*"
flake8-blind-except = "*"
flake8-debugger = "*"
flake8-docstrings = "*"
flake8-isort = "*"
flake8-quotes = "*"
Flask-DebugToolbar = "*"
isort = "*"
pep8-naming = "*"
pyopenssl = "*"
pytest = "*"
WebTest = "*"
coverage = "^5.5"
