[tool.poetry]
name = "Dribdat"
version = "0.8.2"
description = "Online platform for time-limited collaborative events"
authors = ["Dribdat contributors <dribdat@datalets.ch>"]

[tool.poetry.dependencies]
bleach = "^6"
boto3 = "^1.26"
click = "^8"
cssmin = "^0.2"
email-validator = "^1.1.2"
Flask = "^2.2.5"
flask-assets = ">=0.12"
flask-bcrypt = ">=0.7.1"
flask-caching = ">=1.3.3"
flask-cors = "^3"
flask-dance = "^6"
flask-hashing = "^1.1"
flask-login = ">=0.4.0"
flask-mailman = "^0.3"
flask-migrate = "^4"
flask-misaka = "^1"
flask-sqlalchemy = ">=2.3.2"
flask-talisman = ">=0.7.0"
flask-wtf = ">=1.0.1"
frictionless = ">=4.19.5,<5"
future = "^0.18"
graphene = "^3.2"
gunicorn = {extras = ["gevent"], version = ">=21.2.0"}
hiredis = "^2.2"
itsdangerous = "^2.1"
jinja2 = "^3.1"
jsmin = "^3.0"
markupsafe = "^2.1"
micawber = "^0.5"
misaka = "^2.1"
psycopg2-binary = "^2.9"
pyquery = "^2.0"
pystache = "^0.6"
python = ">=3.8,<4"
python-dotenv = "^0.21"
pytz = "^2023"
pyyaml = "^6"
redis = "^4.5"
requests = "^2.31"
typer = "^0.11"
sqlalchemy = ">=1.1.14,<2"
SQLAlchemy-Continuum = "^1.3"
urllib3 = "<2"
werkzeug = "^3.0"
whitenoise = "^5.3"
wtforms = "^3.0"

[tool.poetry.dev-dependencies]
factory-boy = "*"
flake8 = "*"
flake8-blind-except = "*"
flake8-debugger = "*"
flake8-docstrings = "*"
flake8-isort = "*"
flake8-quotes = "*"
Flask-DebugToolbar = "*"
isort = "*"
pep8-naming = "*"
pyopenssl = "*"
pytest = "*"
WebTest = "*"
coverage = "*"

